--- a/style.css
+++ b/style.css
@@ -177,3 +177,25 @@ float:left;
 .btn:hover { background: #b1b1b1; }
 
 .btn:focus-visible { outline: 2px solid #000; outline-offset: 2px; }
+
+.right-side-calendar {
+  background-color: #D3D3D3;
+  padding: 10px 20px;
+  color: white;
+  font-family: 'Courier New';
+  font-weight: bold;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.left-side-calendar {
+  background-color: #D3D3D3;
+  padding: 10px 20px;
+  color: white;
+  font-family: 'Courier New';
+  font-weight: bold;
+  border-radius: 5px;
+  margin-left: 20px;
+  font-size: 15px;
+}
+
